# cmake_all_in_one

./: .gitignore  CMakeLists.txt  CMakeListsTemplates.txt  README.md
ProjA/: CMakeLists.txt
ProjA/src/: CMakeLists.txt
ProjA/test/: CMakeLists.txt
ProjB/: CMakeLists.txt
ProjB/doc/: CMakeLists.txt
ProjB/test/: CMakeLists.txt
cmake/: ConfigCMake.cmake  ConfigCompiler.cmake  ConfigTargets.cmake  Custom.cmake  EnviromentConfig.h.in  OptionsUtils.cmake  Version.h.in  enviroment_check.cmake  readme.txt  version.cmake
cmake/code_check/: ClangTidy.cmake  Cppcheck.cmake
cmake/code_version/: GetGitRevisionDescription.cmake  get_code_version.cmake  git_info.cmake
cmake/compiler/: CompilerWarnings.cmake
cmake/modules/: ConfigDepLibPath.cmake  FindArcsoftSDK.cmake  FindBGS.cmake  FindCCV.cmake  FindCaffe.cmake  FindCommonSDK.cmake  FindCothinkingSDK.cmake  FindCvBlob.cmake  FindDataCenterSDK.cmake  FindDevCommon.cmake  FindET199.cmake  FindFaceSDK.cmake  FindFreeImage.cmake  FindFreeType.cmake  FindMPEG7Fex.cmake  FindMySQLCPPCon.cmake  FindOCRSDK.cmake  FindOpenVINO.cmake  FindRecognitionSDK.cmake  FindRetrivalSDK.cmake  FindSmartCZeroMQ.cmake  FindSmartCryptoPP.cmake  FindSmartDlib.cmake  FindSmartFFMPEG.cmake  FindSmartFFTW.cmake  FindSmartGFlags.cmake  FindSmartGMock.cmake  FindSmartGTest.cmake  FindSmartGlog.cmake  FindSmartInfoware.cmake  FindSmartLMDB.cmake  FindSmartLeptonica.cmake  FindSmartLevelDB.cmake  FindSmartProtobuf.cmake  FindSmartPthread.cmake  FindSmartTesseract.cmake  FindSmartZeroMQ.cmake  FindTensorRT.cmake  FindVFPSDK.cmake  FindVideoAnalysisSDK.cmake  (+2 more)
cmake/package/: Conan.cmake  Doxygen.cmake  PackageConfigurator.cmake
cmake/toolchains/: aarch64-linux-gnu.toolchain.cmake
